# MemoryManager

./: CMakeLists.txt  Makefile  README.md
ProcessMemoryMonitor/: CMakeLists.txt  Makefile  README.md
ProcessMemoryMonitor/include/: process_memory_monitor.h
ProcessMemoryMonitor/src/: main.cpp  process_memory_monitor.cpp
SystemMemeryManager/: CMakeLists.txt  README.md
SystemMemeryManager/include/: meminfo.h  meminfo.hpp  memory_pool.h
SystemMemeryManager/src/: main.cpp  meminfo.c  meminfo.cpp  memory_pool.c  memory_pool.cpp
SystemMemoryManager/: CMakeLists.txt  Makefile  README.md
SystemMemoryManager/include/: memory_pool.hpp
include/: meminfo.h
src/: main.c  meminfo.c  memory_pool.c
